@@ -7,3 +7,5 @@
 ## Languages used
 ![java](https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=java&logoColor=white)<br>
 Also use JavaFX for Controllers
+## Requirements
+Don't forget to add the VM Options : Run->Edit Configuration->"--module-path "..\CPOA-project-master\lib\javafx-sdk-17.0.1\lib" --add-modules javafx.controls,javafx.fxml "
